# malalongxia

./: .gitignore  CLAUDE.md  PLUGIN_RESEARCH.md  PROMOTION.md  README.en.md  README.md  package.json  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: build.yml  deploy.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: config.rs  environment.rs  install.rs  mirror.rs  mod.rs  path_env.rs
src/components/: Layout.tsx  LogViewer.test.tsx  LogViewer.tsx  MirrorSelector.test.tsx  MirrorSelector.tsx  ProgressBar.test.tsx  ProgressBar.tsx  StepIndicator.test.tsx  StepIndicator.tsx  UpdateBanner.tsx  index.ts
src/hooks/: useMirrorConfig.ts  useStepNavigation.test.tsx  useStepNavigation.ts
src/i18n/: index.ts
src/i18n/locales/: en-US.json  zh-CN.json
src/pages/: ApiConfigPage.css  ApiConfigPage.test.tsx  ApiConfigPage.tsx  CompletionPage.css  CompletionPage.test.tsx  CompletionPage.tsx  DashboardPage.css  DashboardPage.test.tsx  DashboardPage.tsx  EnvCheckPage.css  EnvCheckPage.test.tsx  EnvCheckPage.tsx  FeishuConfigPage.css  FeishuConfigPage.tsx  NodeInstallPage.css  NodeInstallPage.test.tsx  NodeInstallPage.tsx  OpenClawInstallPage.css  OpenClawInstallPage.test.tsx  OpenClawInstallPage.tsx  WelcomePage.css  WelcomePage.test.tsx  WelcomePage.tsx
src/stores/: useInstallStore.test.ts  useInstallStore.ts
src/styles/: global.css
src/test/: render.tsx  setup.ts
src/types/: index.ts
website/: index.html  main.js  style.css  version.json
(+3 files in other folders)
